--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,5 +7,5 @@ BBFILE_COLLECTIONS += "meteorpi"
 BBFILE_PATTERN_meteorpi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meteorpi = "1"
 LAYERVERSION_meteorpi = "1"
-LAYERSERIES_COMPAT_meteorpi = "zeus"
+LAYERSERIES_COMPAT_meteorpi = "dunfell"
 
